--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
+sourceCompatibility = '1.5'
+targetCompatibility = '1.5'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
@@ -21,10 +24,25 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.apache.httpcomponents:httpclient:4.4.1'
+    compile 'org.apache.httpcomponents:httpasyncclient:4.1'
 
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.11'
+    testCompile 'org.testng:testng:6.8.17'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+}
+
+test {
+    testLogging {
+        events "started", "passed", "skipped", "failed", "standardOut", "standardError"
+        exceptionFormat "full"
+    }
+
+    useTestNG {
+        suiteName 'unitTest'
+    }
+}
+
+configurations.all {
+    resolutionStrategy {
+    }
 }
