--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.slf4j:slf4j-api:1.7.12'
+
     compile 'org.apache.httpcomponents:httpclient:4.4.1'
     compile 'org.apache.httpcomponents:httpasyncclient:4.1'
     compile 'commons-codec:commons-codec:1.10'
@@ -34,6 +35,7 @@ dependencies {
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
 
+    testCompile 'org.slf4j:slf4j-simple:1.7.12'
     testCompile 'org.testng:testng:6.8.17'
     testCompile 'org.mockito:mockito-all:1.10.19'
 }
@@ -45,7 +47,7 @@ test {
     }
 
     useTestNG {
-        excludeGroups 'integrationTest'
+        excludeGroups 'integrationTest', 'disabled'
     }
 }
 
