--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ def gitUrl = 'https://github.com/gde-vt/veritrans-java.git'
 def gitIssuesUrl = 'https://github.com/gde-vt/veritrans-java/issues'
 
 group = 'id.co.veritrans'
-version = '0.1.2g-preview'
+version = '0.1.3-preview'
 
 sourceCompatibility = '1.5'
 targetCompatibility = '1.5'
