--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -33,7 +33,7 @@ repositories {
 }
 
 dependencies {
-    compile("id.co.veritrans:vt-java-client:0.1.3-preview")
+    compile("id.co.veritrans:vt-java-client")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-aop")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
