--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,7 @@ install {
 }
 
 def Properties bintrayProperties = new Properties()
-bintrayProperties.load(project.file('bintray.properties').newDataInputStream())
+//bintrayProperties.load(project.file('bintray.properties').newDataInputStream())
 
 bintray {
     user = bintrayProperties.getProperty("bintray.user")
