--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,10 @@ configurations.all {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
+}
+
 task sourceJar(type: Jar) {
     from sourceSets.main.allSource
     classifier = 'sources'
@@ -103,7 +107,7 @@ install {
 
                 // Add your description here
                 name 'Veritrans Java Client Library'
-                description = 'Official Veritrans Payment API Java Client.'
+                description = 'Official Payment API Java Client.'
                 url siteUrl
 
                 // Set your license
@@ -138,7 +142,7 @@ install {
 }
 
 def Properties bintrayProperties = new Properties()
-//bintrayProperties.load(project.file('bintray.properties').newDataInputStream())
+bintrayProperties.load(project.file('bintray.properties').newDataInputStream())
 
 bintray {
     user = bintrayProperties.getProperty("bintray.user")
@@ -150,8 +154,9 @@ bintray {
     //Package configuration. The plugin will use the repo and name properties to check if the package already exists. In that case, there's no need to configure the other package properties (like userOrg, desc, etc).
     pkg {
         repo = 'maven'
-        name = 'veritrans-java-client'
-        desc = 'Official Veritrans Payment API Java Client.'
+        name = 'java-client'
+        userOrg = 'pt-midtrans'
+        desc = 'Official Veritrans Indonesia Payment API Java Client.'
 
         websiteUrl = siteUrl
         issueTrackerUrl = gitIssuesUrl
@@ -165,7 +170,7 @@ bintray {
             //Optional configuration for GPG signing
             gpg {
                 sign = true //Determines whether to GPG sign the files. The default is false
-                passphrase = 'VeriTrans!23' //Optional. The passphrase for GPG signing'
+                passphrase = bintrayProperties.getProperty("bintray.gpg.passphrase") //Optional. The passphrase for GPG signing'
             }
 
             //Optional configuration for Maven Central Synchronization
