Init sample app documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,3 +5,4 @@ pages:
 - [index.md, Home]
 - [javadoc/index.html, Javadoc]
 - [sequence_diagram.md, Sequence Diagram]
+- [sample_app.md, Sample App]
