--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.12'
-    compile 'org.slf4j:log4j-over-slf4j:1.7.12'
 
     compile 'org.apache.httpcomponents:httpclient:4.4.1'
     compile 'org.apache.httpcomponents:httpasyncclient:4.1'
@@ -48,7 +47,8 @@ dependencies {
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
 
-    testCompile 'org.slf4j:slf4j-simple:1.7.12'
+    testCompile 'org.slf4j:log4j-over-slf4j:1.7.12'
+    testCompile 'ch.qos.logback:logback-classic:1.1.3'
     testCompile 'org.testng:testng:6.8.17'
     testCompile 'org.mockito:mockito-all:1.10.19'
 }
