--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("id.co.veritrans:vt-java-client:2.0.1-release")
+    compile("id.co.veritrans:vt-java-client:1.0.0")
     runtime("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
