Add release notes document

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,3 +6,4 @@ pages:
 - [javadoc/index.html, Javadoc]
 - [sequence_diagram.md, Sequence Diagram]
 - [sample_app.md, Sample App]
+- [release_notes.md, Release Notes]
