Add shadow plugin for building fat jar

--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,23 @@
  * user guide available at http://gradle.org/docs/2.2.1/userguide/tutorial_java_projects.html
  */
 
+buildscript {
+    repositories { jcenter() }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.1'
+    }
+}
+
 plugins {
     id "com.jfrog.bintray" version "1.1"
+    id "java"
+    id "com.github.johnrengelman.shadow" version "1.2.1"
 }
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 def siteUrl = 'https://github.com/gde-vt/veritrans-java'
 def gitUrl = 'https://github.com/gde-vt/veritrans-java.git'
