Add shadowJar to artifact for bintray upload

--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 artifacts {
     archives sourceJar
     archives javadocJar
+    archives shadowJar
 }
 
 install {
