--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,9 @@ dependencies {
 
     compile 'javax.validation:validation-api:1.1.0.Final'
     compile 'org.hibernate:hibernate-validator:5.2.0.Beta1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.4'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.4'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.4'
 
     testCompile 'org.slf4j:log4j-over-slf4j:1.7.12'
     testCompile 'ch.qos.logback:logback-classic:1.1.3'
